--- a/desafios/desafio-Desconto-de-10.html
+++ b/desafios/desafio-Desconto-de-10.html
@@ -22,7 +22,7 @@
         <a href="desafio-Conversor-de-Medidas.html">desafio-Conversor-de-Medidas</a>
         <a href="desafio-Conversor-de-Moedas.html">desafio-Conversor-de-Moedas</a>
         <a href="desafio-Conversor-de-Temperaturas.html">desafio-Conversor-de-Temperaturas</a>
-        <a href="desafio-Desconto-de-10%.html">desafio-Desconto-de-10</a>
+        <a href="desafio-Desconto-de-10.html">desafio-Desconto-de-10</a>
         <a href="desafio-Mensagens.html">desafio-Mensagens</a>
         <a href="desafio-Preco-Mudou.html">desafio-Preco-Mudou</a>
         <a href="desafio-reajusteSalarial.html">desafio-reajusteSalarial</a>
